<resources>
    <string name="app_name">Aplikasi Rumus Keliling</string>
    <string name="segitiga">Keliling Segitiga</string>
    <string name="persegipanjang">Keliling Persegi Panjang</string>
    <string name="a">Sisi A</string>
    <string name="b">Sisi B</string>
    <string name="c">Sisi C</string>
    <string name="total">Hitung</string>
    <string name="hasil">Hasil</string>
    <string name="panjang">Panjang</string>
    <string name="lebar">Lebar</string>
    <string name="hasilpersegipanjang">Hasil</string>
    <string name="totalpersegipanjang">Hitung</string>
</resources>
